--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,10 @@
 
     <dependencies>
         <!--<dependency>-->
-            <!--<groupId>org.hamcrest</groupId>-->
-            <!--<artifactId>hamcrest-all</artifactId>-->
-            <!--<version>1.3</version>-->
-            <!--<scope>test</scope>-->
+        <!--<groupId>org.hamcrest</groupId>-->
+        <!--<artifactId>hamcrest-all</artifactId>-->
+        <!--<version>1.3</version>-->
+        <!--<scope>test</scope>-->
         <!--</dependency>-->
         <dependency>
             <groupId>junit</groupId>
@@ -58,21 +58,43 @@
                 <!--&lt;!&ndash;<version>2.17</version>&ndash;&gt;-->
                 <!--<version>2.17</version>-->
                 <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<id>validate</id>-->
-                        <!--<phase>validate</phase>-->
-                        <!--<configuration>-->
-                            <!--<configLocation>checkstyle.xml</configLocation>-->
-                            <!--<encoding>UTF-8</encoding>-->
-                            <!--<consoleOutput>true</consoleOutput>-->
-                            <!--<failsOnError>true</failsOnError>-->
-                            <!--<includeTestSourceDirectory>true</includeTestSourceDirectory>-->
-                        <!--</configuration>-->
-                        <!--<goals>-->
-                            <!--<goal>check</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
+                <!--<execution>-->
+                <!--<id>validate</id>-->
+                <!--<phase>validate</phase>-->
+                <!--<configuration>-->
+                <!--<configLocation>checkstyle.xml</configLocation>-->
+                <!--<encoding>UTF-8</encoding>-->
+                <!--<consoleOutput>true</consoleOutput>-->
+                <!--<failsOnError>true</failsOnError>-->
+                <!--<includeTestSourceDirectory>true</includeTestSourceDirectory>-->
+                <!--</configuration>-->
+                <!--<goals>-->
+                <!--<goal>check</goal>-->
+                <!--</goals>-->
+                <!--</execution>-->
                 <!--</executions>-->
+
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-checkstyle-plugin</artifactId>-->
+                <!--<version>2.17</version>-->
+                <!--<executions>-->
+                <!--<execution>-->
+                <!--<id>validate</id>-->
+                <!--<phase>validate</phase>-->
+                <!--<configuration>-->
+                <!--<configLocation>checkstyle.xml</configLocation>-->
+                <!--<encoding>UTF-8</encoding>-->
+                <!--<consoleOutput>true</consoleOutput>-->
+                <!--<failsOnError>true</failsOnError>-->
+                <!--<includeTestSourceDirectory>true</includeTestSourceDirectory>-->
+                <!--</configuration>-->
+                <!--<goals>-->
+                <!--<goal>check</goal>-->
+                <!--</goals>-->
+                <!--</execution>-->
+                <!--</executions>-->
+
+
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>2.17</version>
@@ -92,6 +114,7 @@
                         </goals>
                     </execution>
                 </executions>
+
             </plugin>
         </plugins>
     </build>
