--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,8 @@
     <build>
         <plugins>
 
+
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -54,7 +56,12 @@
                 </configuration>
             </plugin>
 
+
+
             <plugin>
+
+
+
                 <!--<groupId>org.apache.maven.plugins</groupId>-->
                 <!--<artifactId>maven-checkstyle-plugin</artifactId>-->
                 <!--&lt;!&ndash;<version>2.17</version>&ndash;&gt;-->
@@ -110,6 +117,11 @@
                             <consoleOutput>true</consoleOutput>
                             <failsOnError>true</failsOnError>
                             <includeTestSourceDirectory>true</includeTestSourceDirectory>
+
+
+                            <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
+                            <excludes>**/SimpleHashMap.java</excludes>
+
                         </configuration>
                         <goals>
                             <goal>check</goal>
@@ -118,6 +130,27 @@
                 </executions>
 
             </plugin>
+
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.7.9</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
         </plugins>
     </build>
 
