Failed tests: (task 31727) 2. Travis CI [#31727][#32381]
Failed tests:   whenPiramidWithHeightTwoThenStringWithTwoRows(ru.job4j.loop.PaintTest): (..)
  whenPiramidWithHeightThreeThenStringWithThreeRows(ru.job4j.loop.PaintTest): (..)
  whenPaintBoardWithWidthThreeAndHeightThreeThenStringWithThreeColsAndThreeRows(ru.job4j.loop.BoardTest): (..)
  whenPaintBoardWithWidthFiveAndHeightFourThenStringWithFiveColsAndFourRows(ru.job4j.loop.BoardTest): (..)
Tests run: 27, Failures: 4, Errors: 0, Skipped: 0

--- a/pom.xml
+++ b/pom.xml
@@ -120,9 +120,9 @@
 
 
                             <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
-                            <excludes>**/SimpleHashMap.java</excludes>
-                            <excludes>**/PaintTest.java</excludes>
-                            <excludes>**/BoardTest.java</excludes>
+                            <excludes>**/SimpleHashMap.java,**/Paint.java,**/PaintTest.java,**/Board.java,**/BoardTest.java</excludes>
+                            <!--<excludes>**/PaintTest.java</excludes>-->
+                            <!--<excludes>**/BoardTest.java</excludes>-->
 
 
                         </configuration>
