--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
 
 
     <dependencies>
+        <!--<dependency>-->
+        <!--<groupId>org.hamcrest</groupId>-->
+        <!--<artifactId>hamcrest-all</artifactId>-->
+        <!--<version>1.3</version>-->
+        <!--<scope>test</scope>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -39,6 +45,8 @@
     <build>
         <plugins>
 
+
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -48,7 +56,53 @@
                 </configuration>
             </plugin>
 
+
+
             <plugin>
+
+
+
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-checkstyle-plugin</artifactId>-->
+                <!--&lt;!&ndash;<version>2.17</version>&ndash;&gt;-->
+                <!--<version>2.17</version>-->
+                <!--<executions>-->
+                <!--<execution>-->
+                <!--<id>validate</id>-->
+                <!--<phase>validate</phase>-->
+                <!--<configuration>-->
+                <!--<configLocation>checkstyle.xml</configLocation>-->
+                <!--<encoding>UTF-8</encoding>-->
+                <!--<consoleOutput>true</consoleOutput>-->
+                <!--<failsOnError>true</failsOnError>-->
+                <!--<includeTestSourceDirectory>true</includeTestSourceDirectory>-->
+                <!--</configuration>-->
+                <!--<goals>-->
+                <!--<goal>check</goal>-->
+                <!--</goals>-->
+                <!--</execution>-->
+                <!--</executions>-->
+
+                <!--<groupId>org.apache.maven.plugins</groupId>-->
+                <!--<artifactId>maven-checkstyle-plugin</artifactId>-->
+                <!--<version>2.17</version>-->
+                <!--<executions>-->
+                <!--<execution>-->
+                <!--<id>validate</id>-->
+                <!--<phase>validate</phase>-->
+                <!--<configuration>-->
+                <!--<configLocation>checkstyle.xml</configLocation>-->
+                <!--<encoding>UTF-8</encoding>-->
+                <!--<consoleOutput>true</consoleOutput>-->
+                <!--<failsOnError>true</failsOnError>-->
+                <!--<includeTestSourceDirectory>true</includeTestSourceDirectory>-->
+                <!--</configuration>-->
+                <!--<goals>-->
+                <!--<goal>check</goal>-->
+                <!--</goals>-->
+                <!--</execution>-->
+                <!--</executions>-->
+
 
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
@@ -64,11 +118,13 @@
                             <failsOnError>true</failsOnError>
                             <includeTestSourceDirectory>true</includeTestSourceDirectory>
 
+
                             <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
                             <!--<excludes>**/SimpleHashMap.java,**/Paint.java,**/PaintTest.java,**/Board.java,**/BoardTest.java</excludes>-->
                             <excludes>**/SimpleHashMap.java</excludes>
                             <!--<excludes>**/PaintTest.java</excludes>-->
                             <!--<excludes>**/BoardTest.java</excludes>-->
+
 
                         </configuration>
                         <goals>
@@ -101,5 +157,6 @@
 
         </plugins>
     </build>
+
 
 </project>
