technical commit for travis-ci.org correct display

--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,7 @@
 
                             <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
                             <!--<excludes>**/SimpleHashMap.java,**/Paint.java,**/PaintTest.java,**/Board.java,**/BoardTest.java</excludes>-->
-                            <excludes>**/SimpleHashMap.java</excludes>
+                            <excludes>**/SimpleHashMap.java,**/stocksImport/*</excludes>
                             <!--<excludes>**/PaintTest.java</excludes>-->
                             <!--<excludes>**/BoardTest.java</excludes>-->
 
