--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,7 @@
 
                             <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
                             <!--<excludes>**/SimpleHashMap.java,**/Paint.java,**/PaintTest.java,**/Board.java,**/BoardTest.java</excludes>-->
-                            <excludes>**/SimpleHashMap.java,**/stocksImport/*</excludes>
+                            <excludes>**/SimpleHashMap.java,**/stocksImport/*,**/NonBlockinngCashOnConcurrentHashMap.java</excludes>
                             <!--<excludes>**/PaintTest.java</excludes>-->
                             <!--<excludes>**/BoardTest.java</excludes>-->
 
