--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
         <module>chapter_003</module>
         <module>chapter_005</module>
         <module>chapter_007</module>
+        <module>chapter_003_02</module>
+        
     </modules>
 
 
@@ -47,7 +49,13 @@
 	    <artifactId>jcip-annotations</artifactId>
 	    <version>1.0</version>
 	</dependency>
-        
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.21</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -129,7 +137,8 @@
 
                             <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
                             <!--<excludes>**/SimpleHashMap.java,**/Paint.java,**/PaintTest.java,**/Board.java,**/BoardTest.java</excludes>-->
-                            <excludes>**/SimpleHashMap.java,**/stocksImport/*,**/NonBlockinngCashOnConcurrentHashMap.java</excludes>
+                            <excludes>**/SimpleHashMap.java,**/stocksImport/*,**/NonBlockinngCashOnConcurrentHashMap.java
+                                ,**/SQLStorage.java</excludes>
                             <!--<excludes>**/PaintTest.java</excludes>-->
                             <!--<excludes>**/BoardTest.java</excludes>-->
 
