--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <module>chapter_005</module>
         <module>chapter_007</module>
         <module>chapter_003_02</module>
-        
+
     </modules>
 
 
@@ -43,24 +43,69 @@
             <version>1.3</version>
             <scope>test</scope>
         </dependency>
-        
+
         <dependency>
-	    <groupId>net.jcip</groupId>
-	    <artifactId>jcip-annotations</artifactId>
-	    <version>1.0</version>
-	</dependency>
+            <groupId>net.jcip</groupId>
+            <artifactId>jcip-annotations</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+
+
+
+
+        <dependency>
+            <!-- jsoup HTML parser library @ https://jsoup.org/ -->
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.11.2</version>
+        </dependency>
+
+
+
+        <!--<dependency>-->
+            <!--<groupId>log4j</groupId>-->
+            <!--<artifactId>log4j</artifactId>-->
+            <!--<version>1.2.17</version>-->
+        <!--</dependency>-->
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+            <scope>provided</scope>
+        </dependency>
+
 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.21</version>
+            <version>1.7.25</version>
+        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>org.slf4j</groupId>-->
+        <!--<artifactId>slf4j-log4j12</artifactId>-->
+        <!--<version>1.7.25</version>-->
+        <!--</dependency>-->
+
+
+
+
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz-jobs</artifactId>
+            <version>2.2.1</version>
         </dependency>
 
     </dependencies>
 
     <build>
         <plugins>
-
 
 
             <plugin>
@@ -73,9 +118,7 @@
             </plugin>
 
 
-
             <plugin>
-
 
 
                 <!--<groupId>org.apache.maven.plugins</groupId>-->
@@ -137,8 +180,10 @@
 
                             <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
                             <!--<excludes>**/SimpleHashMap.java,**/Paint.java,**/PaintTest.java,**/Board.java,**/BoardTest.java</excludes>-->
-                            <excludes>**/SimpleHashMap.java,**/stocksImport/*,**/NonBlockinngCashOnConcurrentHashMap.java
-                                ,**/SQLStorage.java ,**/StubInputTest.java ,**/TrackerTest.java</excludes>
+                            <excludes>
+                                **/SimpleHashMap.java,**/stocksImport/*,**/NonBlockinngCashOnConcurrentHashMap.java
+                                ,**/SQLStorage.java ,**/StubInputTest.java ,**/TrackerTest.java
+                            </excludes>
                             <!--<excludes>**/PaintTest.java</excludes>-->
                             <!--<excludes>**/BoardTest.java</excludes>-->
 
