--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>chapter_005</module>
         <module>chapter_007</module>
         <module>chapter_003_02</module>
+        <module>chapter_008</module>
 
     </modules>
 
@@ -101,6 +102,9 @@
             <artifactId>quartz-jobs</artifactId>
             <version>2.2.1</version>
         </dependency>
+
+
+
 
     </dependencies>
 
